# simulation_interfaces-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
action/: SimulateSteps.action
debian/: changelog  control  copyright  gbp.conf  rules
msg/: Bounds.msg  EntityCategory.msg  EntityFilters.msg  EntityInfo.msg  EntityState.msg  NamedPose.msg  Resource.msg  Result.msg  SimulationState.msg  SimulatorFeatures.msg  SpawnEntity.msg  SpawnResult.msg  Spawnable.msg  TagsFilter.msg  WorldResource.msg
rpm/: ros-humble-simulation-interfaces.spec  ros-jazzy-simulation-interfaces.spec  ros-kilted-simulation-interfaces.spec  ros-lyrical-simulation-interfaces.spec  ros-rolling-simulation-interfaces.spec  template.spec
srv/: DeleteEntity.srv  GetAvailableWorlds.srv  GetCurrentWorld.srv  GetEntities.srv  GetEntitiesStates.srv  GetEntityBounds.srv  GetEntityInfo.srv  GetEntityState.srv  GetNamedPoseBounds.srv  GetNamedPoses.srv  GetSimulationState.srv  GetSimulatorFeatures.srv  GetSpawnables.srv  LoadWorld.srv  ResetSimulation.srv  SetEntityInfo.srv  SetEntityState.srv  SetSimulationState.srv  SpawnEntities.srv  SpawnEntity.srv  StepSimulation.srv  UnloadWorld.srv
